# airclip

./: .gitignore  README.md  demo.html  pyproject.toml
airclip/: __init__.py  __main__.py  airclip.py
nanoclip/: __init__.py  __main__.py  nanoclip.py
test_output/: BB84Scene.webm  BellStatesScene.webm  BlochSphereScene.webm  GroversSearchScene.webm  SuperpositionScene.webm  WhatIsAQubit.webm  comparison_standard.webm  transparent_demo.py
